# Telegram-cleanup

./: .ENV example  .gitignore  INSTALL.md  README.md  Telegram_cleanup.py  Telegram_cleanup.py v2 more improvement  Telegram_cleanup_v2.py  bot.py  cleanup.py  cleanup_progress.json  main.py  pyproject.toml  requirements.txt  run.py  setup.py  suggest.md
src/: config.py  sdk.py  telegram_cleanup.py
telegram_cleanup/: __init__.py  bot_interface.py  config.py  sdk.py  telegram_cleanup.py
